# validators/authValidator.js
@@ -1,0 +1,13 @@
+const { body, validationResult } = require('express-validator');
+
+exports.loginValidator = [
+  body('email').isEmail().normalizeEmail().withMessage('Valid email is required'),
+  body('password').isString().isLength({ min: 8 }).withMessage('Password must be at least 8 characters'),
+  (req, res, next) => {
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+      return res.status(400).json({ errors: errors.array() });
+    }
+    next();
+  },
+]; 
